# compression-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_roundtrip.rs  02_compression_encode_one_shot.rs  03_compression_decode_one_shot.rs  04_aa_archive_stream_roundtrip.rs  05_aa_byte_stream_pipeline.rs  06_aa_entry_stream_path_list.rs  07_aa_field_key_set.rs  08_aa_header_roundtrip.rs  09_aa_entry_blobs.rs  10_aea_roundtrip.rs  11_aa_custom_stream_callbacks.rs
examples/common/: mod.rs
src/: aa_archive_stream.rs  aa_byte_stream.rs  aa_entry_blob.rs  aa_entry_stream.rs  aa_field_key.rs  aa_header.rs  aea.rs  compression_decode.rs  compression_encode.rs  compression_stream.rs  error.rs  ffi.rs  lib.rs  raw_ffi.rs  stream.rs  util.rs
src/ffi/: aa_archive_stream.rs  aa_byte_stream.rs  aa_entry_blob.rs  aa_entry_stream.rs  aa_field_key.rs  aa_header.rs  aea.rs  compression_decode.rs  compression_encode.rs  compression_stream.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CompressionBridge/: AAArchiveStream.swift  AAByteStream.swift  AAEntryBlob.swift  AAEntryStream.swift  AAFieldKey.swift  AAHeader.swift  AEA.swift  BridgeSupport.swift  CompressionDecode.swift  CompressionEncode.swift  (+1 more)
tests/: aa_archive_stream_tests.rs  aa_byte_stream_tests.rs  aa_entry_blob_tests.rs  aa_entry_stream_tests.rs  aa_field_key_tests.rs  aa_header_tests.rs  aea_tests.rs  compression_decode_tests.rs  compression_encode_tests.rs  compression_stream_tests.rs  custom_stream_tests.rs
tests/support/: mod.rs
